apps/vaultwarden/templates/deployment-vaultwarden-release.yaml
# Source: vaultwarden/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden-release
  namespace: vaultwarden
  labels:
    app.kubernetes.io/component: vaultwarden
    helm.sh/chart: vaultwarden-0.19.0
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/instance: vaultwarden-release
    app.kubernetes.io/version: "1.30.1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: vaultwarden
      app.kubernetes.io/name: vaultwarden
      app.kubernetes.io/instance: vaultwarden-release
  template:
    metadata:
      labels:
        app.kubernetes.io/component: vaultwarden
        app.kubernetes.io/name: vaultwarden
        app.kubernetes.io/instance: vaultwarden-release
      annotations:
        checksum/config: 477926414c665edda40ec4ba5e189336f35248e2
        checksum/secret: 82559ee97e52f551a155000d7c64e09ac220445e
    spec:
      containers:
        - image: docker.io/vaultwarden/server:1.30.1-alpine
          imagePullPolicy: IfNotPresent
          name: vaultwarden
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
            - containerPort: 3012
              name: websocket
              protocol: TCP
          volumeMounts:
            - name: vaultwarden-nfs-pvc
              mountPath: /data
          resources: {}
          livenessProbe:
            httpGet:
              path: /alive
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /alive
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
      serviceAccountName: vaultwarden-svc
      volumes:
        - name: vaultwarden-nfs-pvc
          persistentVolumeClaim:
            claimName: vaultwarden-data-vaultwarden-release-0
