apps/vaultwarden/templates/service-vaultwarden-release.yaml
# Source: vaultwarden/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden-release
  namespace: vaultwarden
  labels:
    app.kubernetes.io/component: vaultwarden
    helm.sh/chart: vaultwarden-0.19.0
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/instance: vaultwarden-release
    app.kubernetes.io/version: "1.30.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: "ClusterIP"
  selector:
    app.kubernetes.io/component: vaultwarden
  ports:
    - name: "http"
      port: 80
      protocol: TCP
      targetPort: 8080
    - name: "websocket"
      port: 3012
      protocol: TCP
      targetPort: 3012
  ipFamilyPolicy: SingleStack
